# rust-mongodb-crud

./: Cargo.toml  Makefile  README.md
src/: db.rs  error.rs  handler.rs  main.rs  schema.rs
